# detector-anomalias

./: .gitignore  README.md  archivo.md  config.yaml  pyproject.toml
dashboard/: app.py  config.py
dashboard/components/: __init__.py  graficos.py  kpis.py  mapa.py
dashboard/pages/: 1_🏠_Home.py  2_🔍_Analisis_Detallado.py  3_📤_Procesar_Datos.py  4_📊_Estadisticas.py
dashboard/utils/: __init__.py  db.py  queries.py
scripts/: calcular_features.py  calcular_features_dispensacion.py  cargar_a_postgres.py  consolidar_a_parquet.py  dashboard.py  dashboard_dispensacion.py  entrenar_modelo_dispensacion.py  generar_razones_anomalias.py  procesar_archivo_15min.py  reglas_negocio.py  revisar.py
sql/: crear_tabla_dispensacion.sql  migrar_datos_dispensacion.sql  verificar_estructura.sql
src/: 1_1_features_avanzadas.py  1_crear_features_temporales.py  2_entrenar_modelo.py  3_detectar_anomalias.py  PROYECTO_DETECCION_FRAUDES_ATM.md  README.md  ejecutar_pipeline.sh
